--- a/templates/countries/country-list.html
+++ b/templates/countries/country-list.html
@@ -68,10 +68,10 @@
         <tr
             ng-show="vm.countries.length != 0"
             ng-repeat="item in vm.countries">
-            <td><a ui-sref="country({ country_id: item.country_id })"><span class="flag-icon flag-icon-{{item.country_id | lowercase }} "></span>{{ item.name }}</a></td>
-            <td>{{item.activity_count}} projects</td>
+            <td><a ui-sref="country({ country_id: item.country_id })"><span class="flag-icon flag-icon-{{item.country_id | lowercase }} "></span>{{ item.recipient_country.name }}</a></td>
+            <td>{{item.count}} projects</td>
             <td>xx programmes</td>
-            <td>{{item.total_disbursements  | shortcurrency :'€'}}</td>
+            <td>{{item.incoming_fund  | shortcurrency :'€'}}</td>
         </tr>
     </tbody>
 </table>
