--- a/templates/filters/filter-panel-activity-status.html
+++ b/templates/filters/filter-panel-activity-status.html
@@ -20,12 +20,12 @@
 					    		<div class="checkbox">
 						    		<label class="switch">
 						    			<input type="checkbox" checklist-model="vm.selectedActivityStatuses" checklist-value="item"><i></i>
-						    			<span>{{ item.name }}</span>
+						    			<span>{{ item.activity_status.name }}</span>
 						    		</label>
 						    	</div>
 					    	</td>
 					    	<td>
-					    		{{ item.activity_count }}
+					    		{{ item.count }}
 					    	</td>
 					    </tr>
 
