--- a/templates/activities/activity-list.html
+++ b/templates/activities/activity-list.html
@@ -55,10 +55,10 @@
         <tr
             ng-show="vm.activities.length != 0"
             ng-repeat="item in vm.activities">
-            <td><a ui-sref="activiteit({ activity_id: item.id })">{{ item.titles[0].title }}</a></td>
+            <td><a ui-sref="activiteit({ activity_id: item.id })">{{ item.title.narratives[0].text }}</a></td>
             <td>{{item.activity_status.name}}</td>
-            <td>{{ country.name }}</td>
-            <td>{{item.total_budget | shortcurrency :'€'}}</td>
+            <td><a ng-repeat="recipient_country in vm.activity.recipient_countries" ui-sref="country({ country_id: recipient_country.country.code })">{{recipient_country.country.name}}{{$last ? '' : ', '}}</a></td>
+            <td>{{item.activity_aggregation.budget_value | shortcurrency :'€'}}</td>
         </tr>
     </tbody>
 </table>
