--- a/templates/locations/locations-view-map-list.html
+++ b/templates/locations/locations-view-map-list.html
@@ -8,7 +8,7 @@
 
             <locations-geo-map geo-view="vm.geoView" map-height="400px" map-legend='true' map-dropdown='false'></locations-geo-map>
 
-            <country-list ng-show="vm.geoView == 'countries'"></country-list>
+            <country-list></country-list>
             
             <region-list ng-show="vm.geoView == 'regions'"></region-list>
 
