--- a/templates/countries/country-list.html
+++ b/templates/countries/country-list.html
@@ -68,7 +68,7 @@
         <tr
             ng-show="vm.countries.length != 0"
             ng-repeat="item in vm.countries">
-            <td><a ui-sref="country({ country_id: item.country_id })"><span class="flag-icon flag-icon-{{item.country_id | lowercase }} "></span>{{ item.recipient_country.name }}</a></td>
+            <td><a ui-sref="country({ country_id: item.recipient_country.code })"><span class="flag-icon flag-icon-{{item.recipient_country.code | lowercase }} "></span>{{ item.recipient_country.name }}</a></td>
             <td>{{item.count}} projects</td>
             <td>xx programmes</td>
             <td>{{item.incoming_fund  | shortcurrency :'€'}}</td>
