--- a/templates/programmes/programmes-view-list.html
+++ b/templates/programmes/programmes-view-list.html
@@ -2,6 +2,6 @@
 
     <filter-bar views="[{'id':'activities-list', 'name': 'Bekijk lijst'}, {'id':'activities', 'name': 'Bekijk op kaart & lijst'}]" current-page="activities"></filter-bar>
 
-    <activity-list></activity-list>
+    <programme-list></programme-list>
 
 </div>
