--- a/templates/_partials/search/search-box.html
+++ b/templates/_partials/search/search-box.html
@@ -8,7 +8,7 @@
                 ng-change="vm.search()"
 	            placeholder="Search on location, projects, sector, organisatie, IATI ID, or keyword">
 	        <button class="btn-search" type="submit">
-	            <span class="icon search"></span>
+	            <span class="fa fa-search"></span>
 	        </button>
         </div>
     </form>
