--- a/templates/filters/filter-panel-recipient-regions.html
+++ b/templates/filters/filter-panel-recipient-regions.html
@@ -6,7 +6,7 @@
 			    <div class="form-group">
 			        <input ng-model="q" class="form-control" placeholder="Search by region name..">
 			        <button class="btn-search" type="button">
-			            <span class="icon search"></span>
+			            <span class="fa fa-search"></span>
 			        </button>
 		        </div>
 			</div>
@@ -23,7 +23,7 @@
 				<thead>
 					<tr>
 						<td class="th-first">Select one or more regions</td>
-						<td>Projects<span class="glyphicon glyphicon-resize-vertical"></span></td>
+						<td>Projects</td>
 					</tr>
 				</thead>
 				<tbody>
