--- a/templates/filters/filter-panel-search.html
+++ b/templates/filters/filter-panel-search.html
@@ -7,7 +7,7 @@
                     <div class="form-group">
                         <input ng-model="vm.query" class="form-control" placeholder="Enter your query...">
                         <button class="btn-search" type="button" ng-click="vm.save()">
-                            <span class="icon search"></span>
+                            <span class="fa fa-search"></span>
                         </button>
                     </div>
                 </form>
