--- a/templates/filters/filter-panel-recipient-countries.html
+++ b/templates/filters/filter-panel-recipient-countries.html
@@ -6,7 +6,7 @@
 				    <div class="form-group">
 				        <input ng-model="vm.q" class="form-control" placeholder="Search by country name..">
 				        <button class="btn-search" type="button">
-				            <span class="icon search"></span>
+				            <span class="fa fa-search"></span>
 				        </button>
 			        </div>
 				</div>
@@ -23,7 +23,7 @@
 					<thead>
 						<tr>
 							<td class="th-first">Select one or more countries</td>
-							<td>Projects<span class="glyphicon glyphicon-resize-vertical"></span></td>
+							<td>Projects</td>
 						</tr>
 					</thead>
 					<tbody>
