--- a/templates/filters/filter-panel-sectors.html
+++ b/templates/filters/filter-panel-sectors.html
@@ -7,7 +7,7 @@
 			    <div class="form-group">
 			        <input ng-model="vm.q" class="form-control" placeholder="Search by sector name..">
 			        <button class="btn-search" type="button">
-			            <span class="icon search"></span>
+			            <span class="fa fa-search"></span>
 			        </button>
 		        </div>
 			</div>
@@ -25,7 +25,7 @@
 				<thead>
 					<tr>
 						<td class="th-first">Select one or more sectors</td>
-						<td>Projects<span class="glyphicon glyphicon-resize-vertical"></span></td>
+						<td>Projects</td>
 					</tr>
 				</thead>
 				<tbody>
