--- a/templates/programmes/programmes-list.html
+++ b/templates/programmes/programmes-list.html
@@ -1,16 +1,31 @@
+MAP HERE
+
 <div class="row">
   <div class="col-sm-12">
     <div class="list front-callout">
       <div class="row">
         <div class="col-sm-12">
           <div class="panel">
-            With {{vm.totalActivities}} projects, XX programmes within XX sectors in XX countries.
+            With {{vm.totalActivities}} programmes and XX projects in XX sectors and XX countries.
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
+
+<div class="row cirkle-vis">
+  <div class="col-sm-6">
+    Figure
+    <h3>Project distribution</h3>
+  </div>
+  <div class="col-sm-6">
+      Figure
+    <h3>Budget distibution</h3>
+  </div>
+</div>
+
+<hr class="darkblue">
 
 <div class="container">  
     <div class="row">
@@ -45,9 +60,10 @@
 <table infinite-scroll='vm.nextPage()' infinite-scroll-disabled='vm.busy' infinite-scroll-distance='1' class="table list-overview">
     <thead>
         <tr>
-            <th width="500">Project title</th>
-            <th>Project status</th>
-            <th>Active in country</th>
+            <th width="500">Programme title</th>
+            <th>Number of projects</th>
+            <th>Number of countries</th>
+            <th>Number of sectors</th>
             <th>Total budget</th>
         </tr>
     </thead>
@@ -56,11 +72,9 @@
             ng-show="vm.activities.length != 0"
             ng-repeat="item in vm.activities">
             <td><a ui-sref="programme({ programme_id: item.id })">{{ item.title.narratives[0].text }}</a></td>
-            <td>{{item.activity_status.name}}</td>
-            <td>
-              <a ng-repeat="recipient_country in vm.activity.recipient_countries" ui-sref="country({ country_id: recipient_country.country.code })">  {{recipient_country.country.name}}{{$last ? '' : ', '}}
-              </a>
-            </td>
+            <td>XX projects</td>
+            <td>XX countries</td>
+            <td>XX sectors</td>
             <td>{{item.activity_aggregation.budget_value | shortcurrency :'€'}}</td>
         </tr>
     </tbody>
