--- a/templates/countries/country-list.html
+++ b/templates/countries/country-list.html
@@ -14,11 +14,11 @@
 
 <div class="row cirkle-vis">
   <div class="col-sm-6">
-    Figure
+    <oipa-pie-chart group-by="activity_status" aggregation-key="count"></oipa-pie-chart>
     <h3>Project distribution</h3>
   </div>
   <div class="col-sm-6">
-      Figure
+    <oipa-pie-chart group-by="activity_status" aggregation-key="count"></oipa-pie-chart>
     <h3>Budget distibution</h3>
   </div>
 </div>
