--- a/templates/implementingOrganisations/implementing-organisations-list.html
+++ b/templates/implementingOrganisations/implementing-organisations-list.html
@@ -16,11 +16,11 @@ MAP HERE
 
 <div class="row cirkle-vis">
   <div class="col-sm-6">
-    Figure
+    <oipa-pie-chart group-by="activity_status" aggregation-key="count"></oipa-pie-chart>
     <h3>Project distribution</h3>
   </div>
   <div class="col-sm-6">
-      Figure
+    <oipa-pie-chart group-by="activity_status" aggregation-key="count"></oipa-pie-chart>
     <h3>Budget distibution</h3>
   </div>
 </div>
