--- a/templates/implementingOrganisations/implementing-organisation-view-detail.html
+++ b/templates/implementingOrganisations/implementing-organisation-view-detail.html
@@ -48,7 +48,7 @@
                     </div> -->
                 </div>
                 <div class="col-md-4">
-                    <div class="panel lightblue">
+                    <div class="panel lightblue with-pie">
                         <h3>Projects per sector</h3>
                         <hr>
                         <oipa-pie-chart group-by="activity_status" aggregation-key="count"></oipa-pie-chart>
