--- a/templates/activities/activity-list.html
+++ b/templates/activities/activity-list.html
@@ -4,7 +4,7 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="panel">
-            With {{vm.totalActivities}} projects, XX programmes within XX sectors in XX countries.
+            With {{vm.totalActivities}} projects and XX programmes in XX sectors and XX countries.
           </div>
         </div>
       </div>
