--- a/templates/countries/country-list.html
+++ b/templates/countries/country-list.html
@@ -4,7 +4,7 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="panel">
-            With XX programmes, XX projects within XX sectors in {{vm.totalCountries}} countries.
+            With XX programmes and XX projects in XX sectors and {{vm.totalCountries}} countries.
           </div>
         </div>
       </div>
