--- a/templates/sectors/sectors-list.html
+++ b/templates/sectors/sectors-list.html
@@ -48,7 +48,7 @@ MAP HERE
       <div class="row">
         <div class="col-sm-12">
           <div class="panel">
-            With XX programmes, XX projects within {{vm.totalSectors}} sectors in XX countries.
+            With XX programmes and XX projects in {{vm.totalSectors}} sectors and XX countries.
           </div>
         </div>
       </div>
