--- a/templates/_layout/index.html
+++ b/templates/_layout/index.html
@@ -43,7 +43,7 @@
     </div>
     <div class="col-sm-3">
       <div class="panel">
-        <h3><a ui-sref="sector-list" class="icon handshake">Programmes</span></a></h3>  
+        <h3><a ui-sref="programmes" class="icon handshake">Programmes</span></a></h3>  
         <p>See which programmes we participate in.</p> 
       </div>
     </div>
