--- a/templates/_layout/index.html
+++ b/templates/_layout/index.html
@@ -6,7 +6,7 @@
   <div class="col-md-4">
     <div class="panel transparent">
       <h1>Open data of the Netherlands Enterprise Agency</h1>
-      <p>Find open data on development aid projects and programs executed  by the Netherlands Enterprise Agency  and funded by the Dutch Ministry of Foreign Affairs. Data reported to the IATI registry.</p>
+      <p>Find open data on development aid projects and programs executed by the Netherlands Enterprise Agency  and funded by the Dutch Ministry of Foreign Affairs. Data reported to the IATI registry.</p>
     </div>
   </div>
   <div class="col-md-4 col-md-offset-4">
@@ -64,7 +64,8 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="panel">
-            Insight into XX development aid projcts committed by the Netherlands Enterprise Agency, in XX countries, with a total budget of XX. Projects unders construction as of commissioned since January 2015.
+            Insight into XX development aid projcts committed by the Netherlands Enterprise Agency, in XX countries, with a total budget of XX. <br>
+            Projects unders construction as of commissioned since January 2015.
           </div>
         </div>
       </div>
@@ -76,15 +77,15 @@
   <div class="row visualize">
       <div class="col-sm-4 text-center">
         <oipa-pie-chart group-by="activity_status" aggregation-key="count"></oipa-pie-chart>
-        <h3>Budget per programme</h3>
+        <h4>Budget per programme</h4>
       </div>
       <div class="col-sm-4 text-center">
         <oipa-pie-chart group-by="recipient_country" aggregation-key="count" top-level="true"></oipa-pie-chart>
-        <h3>Budget per country</h3>
+        <h4>Budget per country</h4>
       </div>
       <div class="col-sm-4 text-center">
         <oipa-pie-chart group-by="sector" aggregation-key="count" top-level="true"></oipa-pie-chart>
-        <h3>Budget per sector</h3>
+        <h4>Budget per sector</h4>
       </div>
   </div>
 </div>
