--- a/templates/countries/country-list.html
+++ b/templates/countries/country-list.html
@@ -13,13 +13,13 @@
 </div>
 
 <div class="row cirkle-vis">
-  <div class="col-sm-6">
+  <div class="col-sm-4 col-sm-offset-2">
     <oipa-pie-chart group-by="activity_status" aggregation-key="count"></oipa-pie-chart>
-    <h3>Project distribution</h3>
+    <h4>Project distribution</h4>
   </div>
-  <div class="col-sm-6">
+  <div class="col-sm-4">
     <oipa-pie-chart group-by="activity_status" aggregation-key="count"></oipa-pie-chart>
-    <h3>Budget distibution</h3>
+    <h4>Budget distibution</h4>
   </div>
 </div>
 
