--- a/templates/sectors/sectors-list.html
+++ b/templates/sectors/sectors-list.html
@@ -57,11 +57,11 @@ MAP HERE
 </div>
 
 <div class="row cirkle-vis">
-  <div class="col-sm-6">
+  <div class="col-sm-3 col-sm-offset-3">
     <oipa-pie-chart group-by="activity_status" aggregation-key="count"></oipa-pie-chart>
     <h4>Project distribution</h4>
   </div>
-  <div class="col-sm-6">
+  <div class="col-sm-3">
     <oipa-pie-chart group-by="activity_status" aggregation-key="count"></oipa-pie-chart>
     <h4>Budget distibution</h4>
   </div>
