--- a/templates/programmes/programmes-list.html
+++ b/templates/programmes/programmes-list.html
@@ -15,11 +15,11 @@ MAP HERE
 </div>
 
 <div class="row cirkle-vis">
-  <div class="col-sm-6">
+  <div class="col-sm-3 col-sm-offset-3">
     <oipa-pie-chart group-by="activity_status" aggregation-key="count"></oipa-pie-chart>
     <h3>Project distribution</h3>
   </div>
-  <div class="col-sm-6">
+  <div class="col-sm-3">
     <oipa-pie-chart group-by="activity_status" aggregation-key="count"></oipa-pie-chart>
     <h3>Budget distibution</h3>
   </div>
